@@ -1,5 +1,0 @@
-yEd is a powerful desktop application that can be used to quickly
-and effectively generate high-quality diagrams.  Create diagrams
-manually, or import your external data for analysis. Its automatic
-layout algorithms arrange even large data sets with just the press
-of a button.
