@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.7 2021/10/26 10:21:44 nia Exp $
-
-BLAKE2s (yEd-3.17.zip) = ac4390181f5890e372b44580fe72a599f5befedd2f44ec56b92503c18f070dd2
-SHA512 (yEd-3.17.zip) = 503348f249915a08dcfcf19e4cf48ecce2df6ca7c168beb2b6bf1031f698b609ccbbd0524ea8e8459ae48e51a9bc36e02c1bd6fb5d1bf2bddb4e164cb4ab3cc3
-Size (yEd-3.17.zip) = 34762028 bytes
